--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@types/lodash": "^4.14.149",
     "@types/uuid": "^3.4.7",
     "core-js": "^3.6.4",
+    "lodash": "^4.17.15",
     "uuid": "^3.4.0",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.2",
