--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "@types/lodash": "^4.14.149",
     "@types/uuid": "^3.4.7",
+    "axios": "^0.19.2",
     "core-js": "^3.6.4",
     "lodash": "^4.17.15",
     "uuid": "^3.4.0",
     "vue": "^2.6.11",
+    "vue-axios": "^2.1.5",
     "vue-class-component": "^7.2.2",
     "vue-property-decorator": "^8.3.0",
     "vue-router": "^3.1.5",
