--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,7 +33,7 @@
     "src/**/*.tsx",
     "src/**/*.vue",
     "tests/**/*.ts",
-    "tests/**/*.tsx"
+    "tests/**/*.tsx", "src/store/types/actions.ts", "src/store/types/mutations.js"
   ],
   "exclude": [
     "node_modules"
